--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/2. 流程图完整性校验.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/2. 流程图完整性校验.md
@@ -18,12 +18,12 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进行流程编辑器页面，拖拽赋值组件至画布，该赋值组件没有上一步的连接节点，单击“保存”，如图2-1所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/197717141-f47c24d6-cb5f-43ca-a29b-d72087501965.png)
 
 ##### 图2-1 流程编辑页面
 
 b）系统弹出错误提示，如图2-2所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/197717159-9c80dc35-4fe1-433c-98d7-3c66a1e66f42.png)
 
 ##### 图2-2 错误提示
