--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/1. 创建第三方脚本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/1. 创建第三方脚本.md
@@ -39,3 +39,11 @@ b3）脚本类型：支持选择Python类型或者Shell类型。
 
 b4）脚本存放路径：即当前脚本在Core服务器或本地服务器的存放路径，路径需以./或者/开头，以./开头说明脚本文件存储在当前部署包目录指定路径下，以/说明文件存储在根目录指定路径下。
 ```
+
+c）输入对应脚本类型的脚本内容，单击提交即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/1-3.png)
+
+##### 图1-3 输入对应脚本类型的脚本内容
+
+##### 说明：图中示例为python类型脚本内容，您可根据实际开发需求进行创建。
