--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/2. 复制第三方脚本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/2. 复制第三方脚本.md
@@ -10,19 +10,19 @@
 
 a）进入项目“第三方脚本”功能模块，选中需复制的第三方脚本，单击“... > 复制第三方脚本”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/199931075-263060ce-31b5-4199-95b3-c9ba9e5dc1bd.png)
 
 ##### 图2-1 单击复制第三方脚本
 
 b）系统提示“是否将脚本复制到当前模块”，您可以根据实际需求选择“当前模块”或“其他模块”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/199931109-26caf9b8-26bd-4340-a450-7a243bd76a0d.png)
 
 ##### 图2-2 根据实际需求选择模块
 
 c）系统显示新建第三方脚本页面，填写好脚本的具体内容后，单击提交即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/199931124-c360de91-f8e8-489c-80a7-a4ba7100684c.png)
 
 ##### 图2-3 填写好脚本的具体内容
 
