--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/3. 导入第三方脚本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/3. 导入第三方脚本.md
@@ -10,13 +10,13 @@
 
 a）进入项目“第三方脚本”功能模块，单击“... > 导入第三方脚本”。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/200262181-f3a6bf37-3495-418f-8446-8ad6a35bef56.png)
 
 ##### 图3-1 单击导入第三方脚本
 
 b）系统显示导入第三方脚本页面，选择并上传需导入的脚本JSON文件，选择需导入至当前项目的第三方脚本模块，并根据实际需求设置“目录标识”以及是否“覆盖原有第三方脚本”，最后单击导入即可。
 
-![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/200262206-880c735a-5423-401c-8074-7b1b498aaab6.png)
 
 ##### 图3-2 选择并上传需导入的脚本JSON文件
 
