--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/4. 导出第三方脚本.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/22. 第三方脚本/4. 导出第三方脚本.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.22 第三方脚本
+
+#### 4.22.4 导出第三方脚本
+
+本节为您介绍如何导出第三方脚本，通过导出操作，用户可将当前项目中的第三方脚本批量导出，以在其他项目中导入使用。
+
+#### 4.22.4.1 操作步骤
+
+a）进入项目“第三方脚本”功能模块，单击“... > 导出第三方脚本”。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/22.%20%E7%AC%AC%E4%B8%89%E6%96%B9%E8%84%9A%E6%9C%AC/4-1.png)
+
+##### 图4-1 单击导出第三方脚本
