--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/1. 变量字段类型模块/1. 新增变量字段类型模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/1. 变量字段类型模块/1. 新增变量字段类型模块.md
@@ -12,18 +12,18 @@
 
 a）进入项目管理页面，选择“变量字段类型”功能模块，单击“新增变量字段类型模块”，如图1-1所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B%E6%A8%A1%E5%9D%97/image.png)
+![image](https://user-images.githubusercontent.com/79617492/200262701-7306e8b6-75c6-43aa-898a-50012d0234ed.png)
 
 ##### 图1-1 单击“新增变量字段类型模块”
 
 b）系统弹出新增变量字段类型模块页面，输入变量字段类型模块的名称和描述，如图1-2所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B%E6%A8%A1%E5%9D%97/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/200262719-54d19ede-1329-40da-a7ee-9357b36aa277.png)
 
 ##### 图1-2 输入变量字段类型模块的名称和描述
 
 c）单击“确定”，可以看到变量字段类型模块新增成功，如图1-3所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B%E6%A8%A1%E5%9D%97/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/200262736-59e3c34a-2419-413f-b456-3cd7862ee4ac.png)
 
 ##### 图1-3 新增成功
