--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/1. 变量字段类型模块/2. 修改变量字段类型模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/1. 变量字段类型模块/2. 修改变量字段类型模块.md
@@ -12,13 +12,13 @@
 
 a）进入变量字段类型页面，选中需修改的变量字段类型模块，单击旁边的三个点按钮，选择“修改变量字段类型模块”，如图2-1所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B%E6%A8%A1%E5%9D%97/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/200264486-c690fa65-a85a-4394-a725-fed33d713395.png)
 
 ##### 图2-1 修改变量字段类型模块
 
 b）系统弹出编辑变量字段类型模块对话框，修改变量字段类型模块的名称和描述信息，如图2-2所示。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B%E6%A8%A1%E5%9D%97/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/200264509-d89e638b-c393-4660-b9b4-27602c365fe6.png)
 
 ##### 图2-2 修改变量字段类型模块信息
 
