--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/1. 新增自定义变量字段类型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/1. 新增自定义变量字段类型.md
@@ -17,3 +17,15 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 #### 4.23.2.1.2 操作步骤
 
 a）首先用户需要在java编译器中编写好自定义程序，并打包成jar包。
+
+b）单击平台菜单栏的“扩展Jar包”选项，如图1-1所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/2.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/image.png)
+
+##### 图1-1 扩展Jar包页面
+
+c）单击“导入”导入Jar包，如图1-2所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/2.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1-2.png)
+
+##### 图1-2 导入Jar包
