--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/1. 新增自定义变量字段类型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/1. 新增自定义变量字段类型.md
@@ -29,3 +29,15 @@ c）单击“导入”导入Jar包，如图1-2所示。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/2.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1-2.png)
 
 ##### 图1-2 导入Jar包
+
+d）Jar包导入完成后，进入“变量字段类型”功能，选中变量字段类型模块，单击添加按钮，选择“新增变量字段类型”，如图1-3所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/2.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1-3.png)
+
+##### 图1-3 变量字段类型模块
+
+e）输入Jar包的包路径名，单击“查询”查询包路径名下所有的字段类型，找到需添加的字段类型名称后进行勾选，再单击“新增”即可。如图1-4所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/23.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/2.%20%E5%8F%98%E9%87%8F%E5%AD%97%E6%AE%B5%E7%B1%BB%E5%9E%8B/1-4.png)
+
+##### 图1-4 新增变量字段类型
