--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/2. 删除自定义变量字段类型.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/23. 变量字段类型/2. 变量字段类型/2. 删除自定义变量字段类型.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.23 变量字段类型
+
+#### 4.23.2 变量字段类型
+
+#### 4.23.2.2 删除自定义变量字段类型
+
+本节为您介绍删除自定义变量字段类型的具体操作过程。
+
+#### 4.23.2.2.1 前提条件
+
+a）您需要拥有“扩展Jar包”以及“变量字段类型”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.23.2.2.2 操作步骤
