--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/1. 数据库设置管理/5. 导入数据库设计.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/1. 数据库设置管理/5. 导入数据库设计.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.1 数据库设置管理
+
+#### 4.24.1.5 导入数据库设计
+
+本节为您介绍如何将数据库设计导入平台。
+
+#### 4.24.1.5.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.1.5.2 操作步骤
+
+a）进入项目，单击数据库设计 > 三个点符号 > 导入设计。
