--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/1. 数据库设置管理/6. 导出数据库设计.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/1. 数据库设置管理/6. 导出数据库设计.md
@@ -27,3 +27,12 @@ b）系统弹出数据库设计导出页面，单击导出即可。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/1.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E7%BD%AE%E7%AE%A1%E7%90%86/6-2.png)
 
 ##### 图6-2 单击导出
+
+
+```
+说明：
+
+b1）如果需要导出历史数据，请打开“是否包含历史数据”的开关。
+
+b2）导出的数据库设计文件一般命名为：“项目名称_数据库设计.json”。
+```
