--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/3. 删除数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/3. 删除数据库.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.2 数据库管理
+
+#### 4.24.2.3 删除数据库
+
+本节为您介绍如何删除项目数据库。
+
+#### 4.24.2.3.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.2.3.2 操作步骤
+
+a）进入数据库设计功能模块页面，选中需要删除的数据库，单击三个点按钮 > 删除数据库。
