--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/3. 删除数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/3. 删除数据库.md
@@ -17,3 +17,11 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 #### 4.24.2.3.2 操作步骤
 
 a）进入数据库设计功能模块页面，选中需要删除的数据库，单击三个点按钮 > 删除数据库。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/3-1.png)
+
+##### 图3-1 单击删除数据库
+
+b）系统提示“是否确定删除该数据库”，确认后单击确定即可。
+
+##### 说明：删除数据库后，数据库下面的表也会一同在平台上删除，但服务器上的数据库表不会删除，若不慎操作删除数据库，还可以通过数据库恢复功能，恢复已删除的数据库。
