--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/5. 连接数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/2. 数据库管理/5. 连接数据库.md
@@ -27,3 +27,19 @@ b）进入数据库连接管理页面，单击新增。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/5-2.png)
 
 ##### 图5-2 单击新增
+
+c）系统显示新增数据库连接页面，根据需求选择对应的数据库类型。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%AE%A1%E7%90%86/5-3.png)
+
+##### 图5-3 根据需求选择对应的数据库类型
+
+```
+说明：
+
+c1）tidb数据库：该数据库创建表时设置了主键或未设置主键，数据库同步到服务器数据库后，其主键就不可以发生改变，若修改了数据库的主键信息，则再次将数据库同步到服务器时会执行SQL异常。
+
+c2）DB2数据库：该数据库不支持IF EXISTS语法，因此不支持重建整表，如果需要重建整表，则需先在服务器上的数据库中删除对应已存在的表。
+
+c3）sql server数据库：更换字段主键时，需先将该字段设置为非空，然后同步到服务器的数据库后，再设置该字段为主键，然后再进行同步，主键才会生效。
+```
