--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/3. 数据库模块管理/4. 恢复模块组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/3. 数据库模块管理/4. 恢复模块组.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.3 数据库模块管理
+
+#### 4.24.3.4 恢复模块组
+
+本节为您介绍如何恢复已删除的项目数据库模块组。
+
+#### 4.24.3.4.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）存在已删除的数据库模块组。
