--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/2. 修改表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/2. 修改表.md
@@ -51,3 +51,17 @@ b2）字段数据类型如果为空，则需要先配置默认的数据类型，
 ```
 
 #### 4.24.4.2.1.3 修改表索引信息
+
+a）单击数据表索引信息页签，进入“数据表索引信息”页，单击左侧新增按钮，自定义表的索引信息。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-4.png)
+
+##### 图2-4 单击左侧新增按钮
+
+b）单击右侧新增按钮，选择引入字段后，单击确定。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/2-5.png)
+
+##### 图2-5 单击右侧新增按钮
+
+c）新增索引字段完成后，单击保存。
